--- a/infra/config.yml
+++ b/infra/config.yml
@@ -3,6 +3,11 @@
   - name: update
     apt: update_cache=yes cache_valid_time=3600
     sudo: true
+  - name: software properties
+    apt: name=software-properties-common state=present
+    sudo: true
+  - name: oracle repo
+    apt_repository: repo='ppa:webupd8team/java' state=present
   - name: java
     apt: name=oracle-java8-installer state=present
     sudo: true
