--- a/infra/config.yml
+++ b/infra/config.yml
@@ -3,6 +3,8 @@
   - name: update
     apt: update_cache=yes cache_valid_time=3600
     sudo: true
+  - name: download signing key
+    apt_key: url=https://dl-ssl.google.com/linux/linux_signing_key.pub state=present
   - name: software properties
     apt: name=software-properties-common state=present
     sudo: true
