--- a/infra/config.yml
+++ b/infra/config.yml
@@ -33,3 +33,5 @@
     sudo: true
   - name: verfiy service
     shell: init-checkconf /etc/init/busmonitor.conf
+  - name: start service
+    service: name=busmonitor state=reloaded
