--- a/infra/files/upstart.conf
+++ b/infra/files/upstart.conf
@@ -1,6 +1,11 @@
 description "Monitor"
 author  "Hugo <hugo@gmail.com>"
+
 start on runlevel [2345]
 stop on runlevel [016]
-exec /monitor/start.sh
-start on startup
+
+script
+
+    exec /monitor/start.sh
+
+end script
